chore: add playground stories
- Add `@custom-elements-manifest/analyzer` package
- Add `wc-storybook-helpers` package

--- a/components/checkbox/stories/checkbox.mdx
+++ b/components/checkbox/stories/checkbox.mdx
@@ -1,4 +1,4 @@
-import * as stories from "./checkbox.stories";
+import * as stories from "./checkbox-and-checkbox-group.stories";
 import description from "../docs/partials/description.md?raw"
 import api from "../docs/api.md?raw";
 import tokens from "../src/styles/tokens.scss?raw";
