--- a/components/counter/stories/counter.mdx
+++ b/components/counter/stories/counter.mdx
@@ -1,4 +1,4 @@
-import * as stories from "./counter.stories";
+import * as stories from "./counter-and-counter-group.stories";
 import description from "../docs/partials/description.md?raw"
 import api from "../docs/api.md?raw";
 import tokens from "../src/styles/tokens.scss?raw";
