--- a/components/radio/stories/README.mdx
+++ b/components/radio/stories/README.mdx
@@ -1,5 +1,5 @@
 import README from '../README.md?raw';
-import * as stories from "./radio.stories";
+import * as stories from "./radio-and-radio-group.stories";
 
 <Meta of={stories} />
 
