--- a/components/checkbox/stories/README.mdx
+++ b/components/checkbox/stories/README.mdx
@@ -1,5 +1,5 @@
 import README from '../README.md?raw';
-import * as stories from "./checkbox.stories";
+import * as stories from "./checkbox-and-checkbox-group.stories";
 
 <Meta of={stories} />
 
