--- a/components/counter/stories/README.mdx
+++ b/components/counter/stories/README.mdx
@@ -1,5 +1,5 @@
 import README from '../README.md?raw';
-import * as stories from "./counter.stories";
+import * as stories from "./counter-and-counter-group.stories";
 
 <Meta of={stories} />
 
