--- a/components/radio/stories/radio.mdx
+++ b/components/radio/stories/radio.mdx
@@ -1,4 +1,4 @@
-import * as stories from "./radio.stories";
+import * as stories from "./radio-and-radio-group.stories";
 import description from "../docs/partials/description.md?raw"
 import api from "../docs/api.md?raw";
 import tokens from "../src/styles/tokens.scss?raw";
